Try adding cache buster for the JS file

--- a/instance-overlay.html
+++ b/instance-overlay.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="content"><span>0</span></div>
-  <script src="instance-overlay.js" async></script>
+  <script src="instance-overlay.js?20211206115233" async></script>
 </body>
 
 </html>
