--- a/src/instance-overlay.html
+++ b/src/instance-overlay.html
@@ -6,13 +6,14 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
+  <meta http-equiv="cache-control" content="private">
   <title></title>
   <link rel="stylesheet" href="instance-overlay.css">
 </head>
 
 <body>
   <div id="content"><span>0</span></div>
-  <script src="instance-overlay.js" async></script>
+  <script src="instance-overlay.js?20211206115233" async></script>
 </body>
 
 </html>
