Cache bust the css file

--- a/src/instance-overlay.html
+++ b/src/instance-overlay.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <meta http-equiv="cache-control" content="private">
   <title></title>
-  <link rel="stylesheet" href="instance-overlay.css">
+  <link rel="stylesheet" href="instance-overlay.css?2022010501">
 </head>
 
 <body>
